# Syracuse

./: .gitignore  CMakeLists.txt  compile.sh  run.sh
include/: StringNum.hpp  Syracuse.hpp
src/: StringNum.cpp  Syracuse.cpp  main.cpp
